<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/todayFragment">

    <fragment
        android:id="@+id/todayFragment"
        android:name="com.olegstashkiv.umbrella.presentation.ui.today.TodayFragment"
        android:label="@string/title_today"
        tools:layout="@layout/fragment_today">
        <argument
            android:name="selectedLocation"
            app:argType="string"
            android:defaultValue=""  />
    </fragment>

    <fragment
        android:id="@+id/navigation_week"
        android:name="com.olegstashkiv.umbrella.presentation.ui.week.WeekFragment"
        android:label="@string/title_week"
        tools:layout="@layout/fragment_week" />

    <fragment
        android:id="@+id/locationsFragment"
        android:name="com.olegstashkiv.umbrella.presentation.ui.location.LocationFragment"
        android:label="@string/title_settings"
        tools:layout="LocationsFragment">
        <action
            android:id="@+id/action_locationsFragment_to_dailyWeatherFragment"
            app:destination="@id/todayFragment"
            app:popUpTo="@id/todayFragment"
            app:popUpToInclusive="true">
            <argument
                android:name="selectedLocation"
                app:argType="string" />
        </action>
    </fragment>
</navigation>