<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.olegstashkiv.umbrella.presentation.ui.WeatherViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".presentation.ui.MainActivity"
        app:constraintBinding="@{viewModel.status}">

        <ImageView
            android:id="@+id/back_button_to_saved_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="20dp"/>

        <ImageView
            android:id="@+id/status_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="130dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:internetImageBinding="@{viewModel.status}"/>

        <TextView
            android:id="@+id/internet_problem_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:text="@string/forecast_not_available"
            android:layout_marginTop="15dp"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/status_image"/>

        <TextView
            android:id="@+id/internet_problem_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textColor="@color/hint"
            android:layout_gravity="center"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/internet_text"
            android:textSize="15sp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/internet_problem_title"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background"
            tools:context=".presentation.ui.MainActivity" >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        tools:text="location" />

                    <ImageView
                        android:id="@+id/current_weather_image"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        app:srcCompat="@drawable/cloudy_sunny" />

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="19sp"
                        tools:text="Monday Jun 23 | 12:12 PM" />

                    <TextView
                        android:id="@+id/temperature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="63sp"
                        android:textStyle="bold"
                        tools:text="30" />

                    <TextView
                        android:id="@+id/current_max_and_min_temperature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:text="H:30 L:5" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="16dp"
                        android:background="@drawable/background_current_weather"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/rain_group"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:layout_weight="0.333"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/rain_image"
                                android:layout_width="34dp"
                                android:layout_height="34dp"
                                android:layout_gravity="center"
                                app:srcCompat="@drawable/rainy" />

                            <TextView
                                android:id="@+id/rain_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                tools:text="80%" />

                            <TextView
                                android:id="@+id/rain_title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/rain"
                                android:textAlignment="center"
                                android:textColor="@color/white" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/wind_speed_group"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:layout_weight="0.333"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/wind_speed_image"
                                android:layout_width="34dp"
                                android:layout_height="34dp"
                                android:layout_gravity="center"
                                app:srcCompat="@drawable/wind" />

                            <TextView
                                android:id="@+id/wind_speed_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                tools:text="13 km/h" />

                            <TextView
                                android:id="@+id/wind_speed_title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/wind_speed"
                                android:textAlignment="center"
                                android:textColor="@color/white" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/humidity_group"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="8dp"
                            android:layout_weight="0.333"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/humidity_image"
                                android:layout_width="34dp"
                                android:layout_height="34dp"
                                android:layout_gravity="center"
                                app:srcCompat="@drawable/humidity" />

                            <TextView
                                android:id="@+id/humidity_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                tools:text="44%" />

                            <TextView
                                android:id="@+id/humidity_title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/humidity"
                                android:textAlignment="center"
                                android:textColor="@color/white" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/today_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="40dp"
                            android:layout_weight="1"
                            android:text="@string/today"
                            android:textColor="#DCA900"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_weather_every_hour"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clipToPadding="false"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp" />

                </LinearLayout>
            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
